*SVN*

* Fixed that rendering a template would require a connection to the database #1146


*1.8.0* (19th April, 2005)

* Added assert_tag and assert_no_tag as a much improved alternative to the deprecated assert_template_xpath_match #1126 [Jamis Buck]

* Deprecated the majority of all the testing assertions and replaced them with a much smaller core and access to all the collections the old assertions relied on. That way the regular test/unit assertions can be used against these. Added documentation about how to use it all.

* Added a wide range of new Javascript effects:
    * Effect.Puff zooms the element out and makes it smoothly transparent at the same time, giving a "puff" illusion #996 [thomas@fesch.at]
      After the animation is completed, the display property will be set to none. 
      This effect will work on relative and absolute positioned elements.
      
    * Effect.Appear as the opposite of Effect.Fade #990 [thomas@fesch.at]
      You should return elements with style="display:none;" or a like class for this to work best and have no chance of flicker.
      
    * Effect.Squish for scaling down an element and making it disappear at the end #972 [thomas@fesch.at]
    
    * Effect.Scale for smoothly scaling images or text up and down #972 [thomas@fesch.at]
    
    * Effect.Fade which smoothly turns opacity from 100 to 0 and then hides the element #960 [thomas@fesch.at]

* Added Request#xml_http_request? (and an alias xhr?) to that'll return true when the request came from one of the Javascript helper methods (Ajax). This can be used to give one behavior for modern browsers supporting Ajax, another to old browsers #1127 [Sam Stephenson]

* Changed render_partial to take local assigns as the second parameter instead of an explicit object and then the assigns. So the API changes from:

    <%= render_partial "account", person, "rules" => regulations.rules %>
    
  ...to:
  