@@ -157,7 +157,7 @@ module ActionView #:nodoc:
     end
 
     def initialize(base_path = nil, assigns_for_first_render = {}, controller = nil)#:nodoc:
-      @base_path, @assigns = base_path, assigns_for_first_render.with_indifferent_access
+      @base_path, @assigns = base_path, assigns_for_first_render
       @controller = controller
     end
 
